--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "next-e-commerce",
   "version": "0.1.0",
   "private": true,
-
-"scripts": {
-  "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider next dev",
-  "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build",
-  "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider next start"
-}
-,
+  "scripts": {
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider next dev",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider next build",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider next start"
+  },
   "dependencies": {
     "@hookform/resolvers": "^1.0.0",
     "date-fns": "^2.16.1",
@@ -19,5 +17,8 @@
     "react-hook-form": "^6.9.2",
     "sass": "^1.26.12",
     "yup": "^0.29.3"
+  },
+  "devDependencies": {
+    "cross-env": "^10.0.0"
   }
 }
